fix(popover): add overflow-wrap to prevent long string from overflowing

--- a/packages/components/src/popover/Popover.module.css
+++ b/packages/components/src/popover/Popover.module.css
@@ -10,6 +10,7 @@
   outline: none;
   transform: translate3d(0, 0, 0);
   box-shadow: 0 4px 5px rgba(0 0 0 / 20%);
+  overflow-wrap: break-word;
   max-width: 260px;
   transition:
     transform 200ms,
